# Lefta

./: .env.example  .gitignore  README.md  deploy.sh
.github/workflows/: release.yml
contracts/: Cargo.toml  inject_sep58.py
contracts/split-router/: Cargo.toml
contracts/split-router/src/: lib.rs
contracts/template-registry/: Cargo.toml
contracts/template-registry/src/: lib.rs
contracts/tests/: split_logic.rs
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: page.tsx
frontend/app/receive/: page.tsx
frontend/app/send/: page.tsx
frontend/app/tentang/: page.tsx
frontend/components/: AllocationBuilder.tsx  BottomNav.tsx  RecipientDashboard.tsx  ScrollReveal.tsx  SmoothScrollProvider.tsx  SplitBar.tsx  SplitPreview.tsx  TopAppBar.tsx  TransactionStatus.tsx  WalletButton.tsx  index.ts
frontend/components/landing/: Footer.tsx  HeroSection.tsx  HowItWorks.tsx  SplitVisual.tsx  TrustSection.tsx
frontend/components/ui/: Button.tsx  Icons.tsx  Input.tsx  Modal.tsx  Spinner.tsx  index.ts
frontend/hooks/: useWallet.ts
frontend/lib/: contracts.ts  freighter.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: WalletButton.tsx
frontend/src/context/: AppContext.tsx  WalletContext.tsx
frontend/src/contracts/: api.ts  config.ts  index.ts  mock.ts  splitRouter.ts  types.ts
frontend/src/hooks/: index.ts  useBudgetTemplates.ts  useContacts.ts  useDepositFlow.ts  (+5 more)
frontend/types/: index.ts
(+26 files in other folders)
