[workspace]
members = ["template-registry", "split-router"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "27.0.0-rc.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
